# agentstack

./: .env.example  .gitignore  CLAUDE.md  Makefile  SPEC-V2.md  START.md  docker-compose.yml  go.mod  go.sum  test_e2e.py
.claude/: CLAUDE.md  settings.json
.next/: trace  trace-build
cli/: cost.go  test.go
cmd/cli/: main.go
cmd/gateway/: main.go
cmd/migrate/: main.go
cmd/server/: main.go
cmd/worker/: main.go
deploy/: Dockerfile  Dockerfile.gateway  Dockerfile.web  docker-compose.prod.yml
docs/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/app/: layout.config.tsx  layout.tsx
internal/auth/: apikey.go  github_oauth.go  hash.go  hash_test.go  jwt.go  jwt_test.go
internal/config/: config.go
internal/model/: apikey.go  organization.go  user.go
internal/server/: handle_apikeys.go  handle_org.go  handle_team.go  routes.go  server.go
internal/worker/: alert_evaluator.go  budget_checker.go  cache_cleanup.go  ingest_writer.go  pattern_matcher.go  test_executor.go  (+1 more)
scripts/: simulate_agents.py
sdk/python/: pyproject.toml  test_e2e.py
sdk/python/agentstack/: __init__.py  batch.py  client.py  cost.py  guard.py  healing.py  session.py  span.py  trace.py
sdk/python/agentstack/instruments/: __init__.py  anthropic.py  crewai.py  langchain.py  langgraph.py  openai.py
sdk/python/tests/: test_sdk.py
seed/: evaluators.json  failure_patterns.json  guardrails.json  model_pricing.json
specs/: spec-core.md  spec-route-guard.md  spec-test-cost.md
web/: next.config.mjs  package-lock.json  package.json
(+206 files in other folders)
